# moedict

./: README.md  moedict.cabal
app/: Main.hs  Types.hs  Util.hs
